# Agentic_Audit

./: README.md  app.py  fixed_receipt_audit.ipynb  pyproject.toml  requirements.txt
src/receipt_audit/: __init__.py  audit.py  cli.py  config.py  modeling.py  parsing.py  prompts.py  schemas.py  ui.py
